force-app/main/default/objects/PO_Payment__c/PO_Payment__c.object-meta.xml
<CustomObject>
    <label>PO Payment</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>PO Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>