force-app/main/default/objects/PO_Payment__c/fields/paymentdate__c.field-meta.xml
<CustomField>
    <fullName>paymentdate__c</fullName>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>