force-app/main/default/objects/PO_Payment__c/fields/Paymentto__c.field-meta.xml
<CustomField>
    <fullName>Paymentto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PO Payment</relationshipLabel>
    <relationshipName>PO_Payment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>